--- a/src/app/wall/main/wall-feed/wall-feed.component.html
+++ b/src/app/wall/main/wall-feed/wall-feed.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="mouseOver">
             <label>Share</label>
-            <mat-icon class="mouseOver" title="Share this post (not created yet)">share</mat-icon>
+            <mat-icon title="Share this post (not created yet)">share</mat-icon>
         </div>
     </mat-card-content>
 
